[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Imagens/fase select rua att-1.png.png" type="Texture" id=2]
[ext_resource path="res://Imagens/mapa-3.png (1).png" type="Texture" id=3]
[ext_resource path="res://Imagens/fase select rua att-3.png.png" type="Texture" id=4]
[ext_resource path="res://Imagens/fase select rua att-4.png.png" type="Texture" id=5]
[ext_resource path="res://Imagens/fase select rua att-2.png.png" type="Texture" id=6]
[ext_resource path="res://Imagens/voltar-2.png.png" type="Texture" id=7]
[ext_resource path="res://Imagens/Botao-voltar-pressionado.png" type="Texture" id=8]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 402.0
margin_bottom = 801.0

[node name="TelaDeAberturInicalFundo" type="Sprite" parent="ColorRect"]
position = Vector2( 196.5, 427.544 )
scale = Vector2( 0.319231, 0.312909 )
texture = ExtResource( 3 )

[node name="Button1" type="Button" parent="."]
anchor_left = 0.17
anchor_top = 0.339
anchor_right = 0.172
anchor_bottom = 0.34565
margin_left = -1.0
margin_top = -83.2
margin_right = 330.2
margin_bottom = 237.48
rect_scale = Vector2( 0.25, 0.25 )
icon = ExtResource( 2 )
flat = true

[node name="Button2" type="Button" parent="."]
anchor_left = 0.17
anchor_top = 0.20375
anchor_right = 0.428
anchor_bottom = 0.34565
margin_left = 180.0
margin_top = 108.0
margin_right = 408.8
margin_bottom = 320.48
rect_scale = Vector2( 0.25, 0.25 )
icon = ExtResource( 6 )
flat = true

[node name="Button3" type="Button" parent="."]
anchor_left = 0.17
anchor_top = 0.20375
anchor_right = 0.428
anchor_bottom = 0.34565
margin_left = 14.0
margin_top = 245.0
margin_right = 242.8
margin_bottom = 457.48
rect_scale = Vector2( 0.25, 0.25 )
icon = ExtResource( 4 )
flat = true

[node name="Button4" type="Button" parent="."]
anchor_left = 0.17
anchor_top = 0.20375
anchor_right = 0.428
anchor_bottom = 0.34565
margin_left = 200.0
margin_top = 350.0
margin_right = 428.8
margin_bottom = 562.48
rect_scale = Vector2( 0.25, 0.25 )
icon = ExtResource( 5 )
flat = true

[node name="moveBackButton" type="TextureButton" parent="."]
margin_left = 17.0
margin_top = 34.0
margin_right = 127.0
margin_bottom = 60.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[connection signal="pressed" from="Button1" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="moveBackButton" to="." method="_on_moveBackButton_pressed"]
